bindings/ios/PubkyApp.xcframework/ios-arm64/Headers/pubkyappFFI.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V4 in this file.           ⚠️

typedef struct RustBuffer
{
    int32_t capacity;
    int32_t len;
    uint8_t *_Nullable data;
} RustBuffer;
typedef int32_t (*ForeignCallback)(uint64_t, int32_t, const uint8_t *_Nonnull, int32_t, RustBuffer *_Nonnull);
typedef struct ForeignBytes
{
    int32_t len;
    const uint8_t *_Nullable data;
} ForeignBytes;
// Error definitions
typedef struct RustCallStatus {
    int8_t code;
    RustBuffer errorBuf;
} RustCallStatus;
// Continuation callback for UniFFI Futures
typedef void (*UniFfiRustFutureContinuation)(void * _Nonnull, int8_t);
// Scaffolding functions
void uniffi_pubkyapp_fn_free_eventnotifier(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void uniffi_pubkyapp_fn_init_callback_eventlistener(ForeignCallback _Nonnull callback_stub, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_pubkyapp_fn_func_auth(RustBuffer url, RustBuffer secret_key, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_pubkyapp_fn_func_cleanup_file(RustBuffer pubky, RustBuffer file_id, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_pubkyapp_fn_func_cleanup_post(RustBuffer pubky, RustBuffer post_id, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_pubkyapp_fn_func_cleanup_user(RustBuffer pubky, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_pubkyapp_fn_func_create_bookmark(RustBuffer pubky, RustBuffer post_id, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_pubkyapp_fn_func_create_file(RustBuffer pubky, RustBuffer file, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_pubkyapp_fn_func_create_follow(RustBuffer follower_pubky, RustBuffer followee_pubky, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_pubkyapp_fn_func_create_post(RustBuffer pubky, RustBuffer post, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_pubkyapp_fn_func_create_recovery_file(RustBuffer secret_key, RustBuffer passphrase, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_pubkyapp_fn_func_create_tag(RustBuffer pubky, RustBuffer label, RustBuffer post_id, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_pubkyapp_fn_func_create_user(RustBuffer secret_key, RustBuffer user, RustBuffer homeserver, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_pubkyapp_fn_func_decrypt_recovery_file(RustBuffer recovery_file, RustBuffer passphrase, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_pubkyapp_fn_func_delete_bookmark(RustBuffer bookmark_url, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_pubkyapp_fn_func_delete_file(RustBuffer url, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_pubkyapp_fn_func_delete_follow(RustBuffer follow_url, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_pubkyapp_fn_func_delete_tag(RustBuffer tag_url, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_pubkyapp_fn_func_generate_secret_key(RustCallStatus *_Nonnull out_status
    
);
RustBuffer uniffi_pubkyapp_fn_func_get(RustBuffer url, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_pubkyapp_fn_func_get_public_key_from_secret_key(RustBuffer secret_key, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_pubkyapp_fn_func_list(RustBuffer url, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_pubkyapp_fn_func_parse_auth_url(RustBuffer url, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_pubkyapp_fn_func_publish(RustBuffer record_name, RustBuffer record_content, RustBuffer secret_key, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_pubkyapp_fn_func_publish_https(RustBuffer record_name, RustBuffer target, RustBuffer secret_key, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_pubkyapp_fn_func_put(RustBuffer url, RustBuffer content, RustCallStatus *_Nonnull out_status
);
void uniffi_pubkyapp_fn_func_remove_event_listener(RustCallStatus *_Nonnull out_status
    
);
RustBuffer uniffi_pubkyapp_fn_func_reset_application_domain(RustCallStatus *_Nonnull out_status
    
);
RustBuffer uniffi_pubkyapp_fn_func_resolve(RustBuffer public_key, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_pubkyapp_fn_func_resolve_https(RustBuffer public_key, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_pubkyapp_fn_func_session(RustBuffer pubky, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_pubkyapp_fn_func_set_application_domain(RustBuffer domain, RustCallStatus *_Nonnull out_status
);
void uniffi_pubkyapp_fn_func_set_event_listener(uint64_t listener, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_pubkyapp_fn_func_sign_in(RustBuffer secret_key, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_pubkyapp_fn_func_sign_out(RustBuffer secret_key, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_pubkyapp_fn_func_sign_up(RustBuffer secret_key, RustBuffer homeserver, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_pubkyapp_fn_func_switch_network(int8_t use_testnet, RustCallStatus *_Nonnull out_status
);
RustBuffer ffi_pubkyapp_rustbuffer_alloc(int32_t size, RustCallStatus *_Nonnull out_status
);
RustBuffer ffi_pubkyapp_rustbuffer_from_bytes(ForeignBytes bytes, RustCallStatus *_Nonnull out_status
);
void ffi_pubkyapp_rustbuffer_free(RustBuffer buf, RustCallStatus *_Nonnull out_status
);
RustBuffer ffi_pubkyapp_rustbuffer_reserve(RustBuffer buf, int32_t additional, RustCallStatus *_Nonnull out_status
);
void ffi_pubkyapp_rust_future_continuation_callback_set(UniFfiRustFutureContinuation _Nonnull callback
);
void ffi_pubkyapp_rust_future_poll_u8(void* _Nonnull handle, void* _Nonnull uniffi_callback
);
void ffi_pubkyapp_rust_future_cancel_u8(void* _Nonnull handle
);
void ffi_pubkyapp_rust_future_free_u8(void* _Nonnull handle
);
uint8_t ffi_pubkyapp_rust_future_complete_u8(void* _Nonnull handle, RustCallStatus *_Nonnull out_status
);
void ffi_pubkyapp_rust_future_poll_i8(void* _Nonnull handle, void* _Nonnull uniffi_callback
);
void ffi_pubkyapp_rust_future_cancel_i8(void* _Nonnull handle
);
void ffi_pubkyapp_rust_future_free_i8(void* _Nonnull handle
);
int8_t ffi_pubkyapp_rust_future_complete_i8(void* _Nonnull handle, RustCallStatus *_Nonnull out_status
);
void ffi_pubkyapp_rust_future_poll_u16(void* _Nonnull handle, void* _Nonnull uniffi_callback
);
void ffi_pubkyapp_rust_future_cancel_u16(void* _Nonnull handle
);
void ffi_pubkyapp_rust_future_free_u16(void* _Nonnull handle
);
uint16_t ffi_pubkyapp_rust_future_complete_u16(void* _Nonnull handle, RustCallStatus *_Nonnull out_status
);
void ffi_pubkyapp_rust_future_poll_i16(void* _Nonnull handle, void* _Nonnull uniffi_callback
);
void ffi_pubkyapp_rust_future_cancel_i16(void* _Nonnull handle
);
void ffi_pubkyapp_rust_future_free_i16(void* _Nonnull handle
);
int16_t ffi_pubkyapp_rust_future_complete_i16(void* _Nonnull handle, RustCallStatus *_Nonnull out_status
);
void ffi_pubkyapp_rust_future_poll_u32(void* _Nonnull handle, void* _Nonnull uniffi_callback
);
void ffi_pubkyapp_rust_future_cancel_u32(void* _Nonnull handle
);
void ffi_pubkyapp_rust_future_free_u32(void* _Nonnull handle
);