bindings/python/pubkyapp/pubkyapp.py


_UniffiLib = _uniffi_load_indirect()
_UniffiLib.uniffi_pubkyapp_fn_free_eventnotifier.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_pubkyapp_fn_free_eventnotifier.restype = None
_UniffiLib.uniffi_pubkyapp_fn_init_callback_eventlistener.argtypes = (
    _UNIFFI_FOREIGN_CALLBACK_T,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_pubkyapp_fn_init_callback_eventlistener.restype = None
_UniffiLib.uniffi_pubkyapp_fn_func_auth.argtypes = (
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_pubkyapp_fn_func_auth.restype = _UniffiRustBuffer
_UniffiLib.uniffi_pubkyapp_fn_func_cleanup_file.argtypes = (
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_pubkyapp_fn_func_cleanup_file.restype = _UniffiRustBuffer
_UniffiLib.uniffi_pubkyapp_fn_func_cleanup_post.argtypes = (
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_pubkyapp_fn_func_cleanup_post.restype = _UniffiRustBuffer
_UniffiLib.uniffi_pubkyapp_fn_func_cleanup_user.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_pubkyapp_fn_func_cleanup_user.restype = _UniffiRustBuffer
_UniffiLib.uniffi_pubkyapp_fn_func_create_bookmark.argtypes = (
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_pubkyapp_fn_func_create_bookmark.restype = _UniffiRustBuffer
_UniffiLib.uniffi_pubkyapp_fn_func_create_file.argtypes = (
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_pubkyapp_fn_func_create_file.restype = _UniffiRustBuffer
_UniffiLib.uniffi_pubkyapp_fn_func_create_follow.argtypes = (
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_pubkyapp_fn_func_create_follow.restype = _UniffiRustBuffer
_UniffiLib.uniffi_pubkyapp_fn_func_create_post.argtypes = (
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_pubkyapp_fn_func_create_post.restype = _UniffiRustBuffer
_UniffiLib.uniffi_pubkyapp_fn_func_create_recovery_file.argtypes = (
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_pubkyapp_fn_func_create_recovery_file.restype = _UniffiRustBuffer
_UniffiLib.uniffi_pubkyapp_fn_func_create_tag.argtypes = (
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_pubkyapp_fn_func_create_tag.restype = _UniffiRustBuffer
_UniffiLib.uniffi_pubkyapp_fn_func_create_user.argtypes = (
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_pubkyapp_fn_func_create_user.restype = _UniffiRustBuffer
_UniffiLib.uniffi_pubkyapp_fn_func_decrypt_recovery_file.argtypes = (
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_pubkyapp_fn_func_decrypt_recovery_file.restype = _UniffiRustBuffer
_UniffiLib.uniffi_pubkyapp_fn_func_delete_bookmark.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_pubkyapp_fn_func_delete_bookmark.restype = _UniffiRustBuffer
_UniffiLib.uniffi_pubkyapp_fn_func_delete_file.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_pubkyapp_fn_func_delete_file.restype = _UniffiRustBuffer
_UniffiLib.uniffi_pubkyapp_fn_func_delete_follow.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_pubkyapp_fn_func_delete_follow.restype = _UniffiRustBuffer
_UniffiLib.uniffi_pubkyapp_fn_func_delete_tag.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_pubkyapp_fn_func_delete_tag.restype = _UniffiRustBuffer
_UniffiLib.uniffi_pubkyapp_fn_func_generate_secret_key.argtypes = (
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_pubkyapp_fn_func_generate_secret_key.restype = _UniffiRustBuffer
_UniffiLib.uniffi_pubkyapp_fn_func_get.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_pubkyapp_fn_func_get.restype = _UniffiRustBuffer
_UniffiLib.uniffi_pubkyapp_fn_func_get_public_key_from_secret_key.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_pubkyapp_fn_func_get_public_key_from_secret_key.restype = _UniffiRustBuffer
_UniffiLib.uniffi_pubkyapp_fn_func_list.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_pubkyapp_fn_func_list.restype = _UniffiRustBuffer
_UniffiLib.uniffi_pubkyapp_fn_func_parse_auth_url.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_pubkyapp_fn_func_parse_auth_url.restype = _UniffiRustBuffer
_UniffiLib.uniffi_pubkyapp_fn_func_publish.argtypes = (
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_pubkyapp_fn_func_publish.restype = _UniffiRustBuffer
_UniffiLib.uniffi_pubkyapp_fn_func_publish_https.argtypes = (
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_pubkyapp_fn_func_publish_https.restype = _UniffiRustBuffer
_UniffiLib.uniffi_pubkyapp_fn_func_put.argtypes = (
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_pubkyapp_fn_func_put.restype = _UniffiRustBuffer
_UniffiLib.uniffi_pubkyapp_fn_func_remove_event_listener.argtypes = (
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_pubkyapp_fn_func_remove_event_listener.restype = None
_UniffiLib.uniffi_pubkyapp_fn_func_reset_application_domain.argtypes = (
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_pubkyapp_fn_func_reset_application_domain.restype = _UniffiRustBuffer
_UniffiLib.uniffi_pubkyapp_fn_func_resolve.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_pubkyapp_fn_func_resolve.restype = _UniffiRustBuffer
_UniffiLib.uniffi_pubkyapp_fn_func_resolve_https.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_pubkyapp_fn_func_resolve_https.restype = _UniffiRustBuffer
_UniffiLib.uniffi_pubkyapp_fn_func_session.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_pubkyapp_fn_func_session.restype = _UniffiRustBuffer
_UniffiLib.uniffi_pubkyapp_fn_func_set_application_domain.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_pubkyapp_fn_func_set_application_domain.restype = _UniffiRustBuffer
_UniffiLib.uniffi_pubkyapp_fn_func_set_event_listener.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_pubkyapp_fn_func_set_event_listener.restype = None
_UniffiLib.uniffi_pubkyapp_fn_func_sign_in.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_pubkyapp_fn_func_sign_in.restype = _UniffiRustBuffer
_UniffiLib.uniffi_pubkyapp_fn_func_sign_out.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_pubkyapp_fn_func_sign_out.restype = _UniffiRustBuffer
_UniffiLib.uniffi_pubkyapp_fn_func_sign_up.argtypes = (
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_pubkyapp_fn_func_sign_up.restype = _UniffiRustBuffer
_UniffiLib.uniffi_pubkyapp_fn_func_switch_network.argtypes = (
    ctypes.c_int8,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_pubkyapp_fn_func_switch_network.restype = _UniffiRustBuffer
_UniffiLib.ffi_pubkyapp_rustbuffer_alloc.argtypes = (
    ctypes.c_int32,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_pubkyapp_rustbuffer_alloc.restype = _UniffiRustBuffer
_UniffiLib.ffi_pubkyapp_rustbuffer_from_bytes.argtypes = (
    _UniffiForeignBytes,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_pubkyapp_rustbuffer_from_bytes.restype = _UniffiRustBuffer
_UniffiLib.ffi_pubkyapp_rustbuffer_free.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_pubkyapp_rustbuffer_free.restype = None
_UniffiLib.ffi_pubkyapp_rustbuffer_reserve.argtypes = (
    _UniffiRustBuffer,
    ctypes.c_int32,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_pubkyapp_rustbuffer_reserve.restype = _UniffiRustBuffer
_UniffiLib.ffi_pubkyapp_rust_future_continuation_callback_set.argtypes = (
    _UNIFFI_FUTURE_CONTINUATION_T,
)
_UniffiLib.ffi_pubkyapp_rust_future_continuation_callback_set.restype = None
_UniffiLib.ffi_pubkyapp_rust_future_poll_u8.argtypes = (
    ctypes.c_void_p,
    ctypes.c_size_t,
)
_UniffiLib.ffi_pubkyapp_rust_future_poll_u8.restype = None
_UniffiLib.ffi_pubkyapp_rust_future_cancel_u8.argtypes = (
    ctypes.c_void_p,
)
_UniffiLib.ffi_pubkyapp_rust_future_cancel_u8.restype = None
_UniffiLib.ffi_pubkyapp_rust_future_free_u8.argtypes = (
    ctypes.c_void_p,
)
_UniffiLib.ffi_pubkyapp_rust_future_free_u8.restype = None
_UniffiLib.ffi_pubkyapp_rust_future_complete_u8.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_pubkyapp_rust_future_complete_u8.restype = ctypes.c_uint8
_UniffiLib.ffi_pubkyapp_rust_future_poll_i8.argtypes = (
    ctypes.c_void_p,
    ctypes.c_size_t,
)
_UniffiLib.ffi_pubkyapp_rust_future_poll_i8.restype = None
_UniffiLib.ffi_pubkyapp_rust_future_cancel_i8.argtypes = (
    ctypes.c_void_p,
)
_UniffiLib.ffi_pubkyapp_rust_future_cancel_i8.restype = None
_UniffiLib.ffi_pubkyapp_rust_future_free_i8.argtypes = (
    ctypes.c_void_p,
)
_UniffiLib.ffi_pubkyapp_rust_future_free_i8.restype = None
_UniffiLib.ffi_pubkyapp_rust_future_complete_i8.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_pubkyapp_rust_future_complete_i8.restype = ctypes.c_int8
_UniffiLib.ffi_pubkyapp_rust_future_poll_u16.argtypes = (
    ctypes.c_void_p,
    ctypes.c_size_t,
)
_UniffiLib.ffi_pubkyapp_rust_future_poll_u16.restype = None
_UniffiLib.ffi_pubkyapp_rust_future_cancel_u16.argtypes = (
    ctypes.c_void_p,
)
_UniffiLib.ffi_pubkyapp_rust_future_cancel_u16.restype = None
_UniffiLib.ffi_pubkyapp_rust_future_free_u16.argtypes = (
    ctypes.c_void_p,
)
_UniffiLib.ffi_pubkyapp_rust_future_free_u16.restype = None
_UniffiLib.ffi_pubkyapp_rust_future_complete_u16.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_pubkyapp_rust_future_complete_u16.restype = ctypes.c_uint16
_UniffiLib.ffi_pubkyapp_rust_future_poll_i16.argtypes = (
    ctypes.c_void_p,
    ctypes.c_size_t,
)
_UniffiLib.ffi_pubkyapp_rust_future_poll_i16.restype = None
_UniffiLib.ffi_pubkyapp_rust_future_cancel_i16.argtypes = (
    ctypes.c_void_p,
)
_UniffiLib.ffi_pubkyapp_rust_future_cancel_i16.restype = None
_UniffiLib.ffi_pubkyapp_rust_future_free_i16.argtypes = (
    ctypes.c_void_p,
)
_UniffiLib.ffi_pubkyapp_rust_future_free_i16.restype = None
_UniffiLib.ffi_pubkyapp_rust_future_complete_i16.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_pubkyapp_rust_future_complete_i16.restype = ctypes.c_int16
_UniffiLib.ffi_pubkyapp_rust_future_poll_u32.argtypes = (
    ctypes.c_void_p,
    ctypes.c_size_t,
)
_UniffiLib.ffi_pubkyapp_rust_future_poll_u32.restype = None
_UniffiLib.ffi_pubkyapp_rust_future_cancel_u32.argtypes = (
    ctypes.c_void_p,
)
_UniffiLib.ffi_pubkyapp_rust_future_cancel_u32.restype = None
_UniffiLib.ffi_pubkyapp_rust_future_free_u32.argtypes = (
    ctypes.c_void_p,
)
